# embedded-project-manager

./: .gitignore  README.md  SKILL.md
.claude/: settings.local.json
EM-SKILL/: CHANGELOG.md  README.md  SKILL.md  pyproject.toml
EM-SKILL/commands/: arch.md  build.md  disc.md  flash.md  gi.md  help.md  init.md  initem.md  migrate-state.md  migrate.md  new.md  pi.md  rec.md  result.md  serial.md  sessions.md  si.md  stat.md  sum.md  sw.md  verify.md
EM-SKILL/commands/scripts/: detect_tools.py
EM-SKILL/docs/: PLUGIN-SPEC.md
EM-SKILL/docs/research/: 2026-07-01-github-references.md
EM-SKILL/em_skill_loader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
EM-SKILL/plugins/: INDEX.md  __init__.py  _loader.py
EM-SKILL/plugins/embedded/: PLUGIN.md
EM-SKILL/plugins/embedded/commands/: build.md  flash.md  initem.md  serial.md
EM-SKILL/plugins/embedded/mcp-servers/: serial-mcp.json
EM-SKILL/plugins/embedded/templates/: claude-md-snippet.md  hvr-template-embedded.md  serial_config.json
EM-SKILL/plugins/learning/: PLUGIN.md
EM-SKILL/plugins/tests/: test_loader.py
EM-SKILL/templates/: decision-log.md  em-migration.md  history-index.md  hvr-template.md  memory-log.md  project-spec.md  project.json  session.md  state.md
EM-SKILL/tools/: project_profile.py
EM-SKILL/tools/em-gui/: .gitignore  index.html  package-lock.json  package.json
EM-SKILL/tools/git-changelog/: README.md  changelog_gen.py
EM-SKILL/tools/serial-mcp/: mcp_server.py  serial_monitor.py  start.bat
EM-SKILL/workflows/: discussion-flow.md  hvr-workflow.md  new-light.md  new-standard.md
(+173 files in other folders)
